--- a/etc/Dockerfile.faucet
+++ b/etc/Dockerfile.faucet
@@ -7,7 +7,7 @@ RUN apk add -q tcpdump iptables sudo linux-headers build-base
 COPY faucet/ /faucet-src/
 
 # Workaround for numpy/alpine dependency problem.
-RUN sed -i 's/networkx>=1.9/networkx<=2.2/' /faucet-src/requirements.txt
+RUN sed -i 's/networkx>=1.9/networkx==2.6.1/' /faucet-src/requirements.txt
 
 # We don't need no stinkin' unit-tests...
 RUN sed -i 's/.*unit.*//' /faucet-src/docker/install-faucet.sh
